<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layCon">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-20dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dianoc"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:checked="true"
                android:onClick="swidn"
                android:thumb="@drawable/ic_switch_thumb"
                android:layout_marginTop="-5dp"
                app:thumbTint="@drawable/ic_solluna"
                app:trackTint="@drawable/ic_track" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/about"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp" />

        </TableRow>

        <TableRow>

                <ImageView
                    android:id="@+id/picme"
                    android:layout_width="150dp"
                    android:layout_height="300sp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/cont1"
                    android:src="@drawable/me"
                    android:background="@drawable/imarou"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:cropToPadding="true"
                    android:paddingTop="5sp"
                    android:paddingStart="5sp"
                    android:paddingBottom="5dp"
                    android:paddingEnd="5sp"/>

        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/subtitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="90"
                android:layout_marginTop="5dp"
                android:text="@string/me"
                android:textStyle="bold"
                android:textSize="18sp" />
            <ImageView
                android:id="@+id/imaUbi"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="10"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/cont1"
                android:src="@drawable/mapa"
                android:backgroundTint="@color/white"
                android:onClick="btnUbi"
                app:backgroundTint="#9C7B81"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/more"
                android:textSize="16sp" />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="3dp"
                android:paddingBottom="5dp">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/comunicar"
                app:backgroundTint="#2D263A"
                app:fabSize="normal" />

        </TableRow>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewSlide"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:layout_height="match_parent" />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>